--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ header {
   align-items: center;
 }
 
-.logo {
-  font-weight: bold;
+.logo img {
+  height: 50px;
 }
 
 /* Hero */
 .hero-section {
-  background-image: url("images/hero.jpg"); /* Add your actual image */
+  background-image: url("images/img-mission-background.jpg");
   background-size: cover;
   background-position: center;
   height: 700px;
@@ -69,20 +69,58 @@ section h2 {
   padding: 40px 0;
 }
 
-.tea-card,
-.location-card {
-  background-color: gray;
-  height: 200px;
+/* Tea Cards */
+.tea-card {
   width: 300px;
+  height: 200px;
+  margin: 10px;
+  text-align: center;
+}
+
+.tea-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.tea-card p {
+  margin-top: 10px;
+}
+
+/* Locations */
+.locations-section {
+  background-image: url("images/img-locations-background.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 50px 0;
+  color: seashell;
+}
+
+.location-card {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 20px;
+  width: 300px;
+  height: 300px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  opacity: 0.8;
+  align-items: center;
 }
 
 /* Footer */
 footer {
   background-color: black;
-  padding: 20px;
+  padding: 40px 0 20px;
   font-size: 18px;
+}
+
+footer h5 {
+  margin: 5px 0;
+}
+
+footer p {
+  margin-top: 20px;
+  font-size: 14px;
+  text-align: left;
+  padding-left: 20px;
 }
